--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
       - run: npm ci
       - run: npm run build
+      - run: npm test
 
   backend:
     name: Backend (NestJS)
@@ -41,3 +42,4 @@ jobs:
 
       - run: npm ci
       - run: npm run build
+      - run: npm test
